--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,11 @@ Icon
 # Files that might appear on external disk
 .Spotlight-V100
 .Trashes
+
+
+#Binaries
+*.suo
+/.vs
+**/bin
+**/obj
+/packages
