--- a/PhotoViewer/PhotoViewer.csproj
+++ b/PhotoViewer/PhotoViewer.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Image.Designer.cs">
       <DependentUpon>Image.cs</DependentUpon>
     </Compile>
+    <Compile Include="DirectoryContent.cs" />
     <Compile Include="MainWindow.cs">
       <SubType>Form</SubType>
     </Compile>
